--- a/templates/page.html
+++ b/templates/page.html
@@ -136,7 +136,7 @@
                         </a>
                     </div>
                     <div class="col-md-4">
-                        <a href="https://github.com/ArchiveTFMVienna/salzarchiv" class="navlink" target="_blank">
+                        <a href="https://github.com/csae8092/salzarchiv" class="navlink" target="_blank">
                             <img src="../resources/img/GitHub-Mark-Light-64px.png" alt="github" width="20%"/>
                         </a>
                     </div>
